# rllm

./: .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE copy.md  Dockerfile  README.md  Strands-implementatino-plan.md  build_docs.sh  codeforces_4k.sh  debug.sh  eval.sh  eval_cf.sh  gen_code_dataset.md  mkdocs.yml  pyproject.toml  requirements.txt  run_4k.sh  run_strands_workflow.py  sbatch.sh  sbatch_async.sh  setup.py  setup.sh  setup_winnie.md
.cursor/rules/: always-use-conda-activate-rllm.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: claude-code-review.yml  claude.yml  pre-commit.yml  test-model-gateway.yml  test-tinker.yml
agenthub/frozenlake_agent/: pyproject.toml
agenthub/frozenlake_agent/agent/: __init__.py  agent.py  env.py
agenthub/frozenlake_agent/eval/: __init__.py  evaluator.py
agenthub/frozenlake_agent/tests/: test_frozenlake.py
agenthub/langgraph_agent/: README.md  pyproject.toml
agenthub/langgraph_agent/langgraph_agent/: agent.py
agenthub/mle_agent/: pyproject.toml
agenthub/mle_bench_agent/: pyproject.toml
agenthub/mle_bench_agent/mle_bench_agent/: __init__.py  agent.py  evaluator.py  prompts.py
agenthub/react_agent/: pyproject.toml
agenthub/smolagents_agent/: README.md  pyproject.toml
agenthub/smolagents_agent/smolagents_agent/: agent.py
agenthub/strands_agent/: README.md
agenthub/swe_agent/: pyproject.toml
agenthub/swe_agent/swe_agent/: __init__.py  agent.py  evaluator.py  prompts.py
agenthub/terminal_agent/: pyproject.toml
agenthub/terminal_agent/terminal_agent/: __init__.py  agent.py  evaluator.py  prompts.py
analysis/: __init__.py
analysis/eval/: legacy_test.ipynb  multi_nodes_1_task_code_replicate_27b.ipynb  multi_nodes_1_task_code_replicate_4b.ipynb  multi_nodes_2_tasks_code.ipynb  multi_nodes_2_tasks_code_replicate.ipynb  multi_nodes_2_tasks_csv.ipynb  new_test.ipynb  replicate_code_new.ipynb
analysis/utils/: __init__.py  eval_utils.py
cookbooks/geo3k/: README.md  evaluator.py  geo3k_flow.py  pyproject.toml  test.py  train.py  train.sh
cookbooks/mlebench/: eval.md  mlebench_integration_cc.md  mlebench_integration_cp.md  mlebench_tool_use.md  ray_agentbox.md  test_agentbox_connection.py  test_prompts.py  test_step2_agentbox_sandbox.py  test_step2b_data_real.py  test_step3_prompts.py  test_step4_agent_loop.py  test_step5_agent_real.py  test_step7_end_to_end.py
cookbooks/solver_judge_flow/: README.md  evaluator.py  pyproject.toml  solver_judge_flow.md  solver_judge_flow.py  test.py  train.py  train.sh
data/: aime_v1.json
data/code/: test_livecodebench.parquet
docs/: README.md  build_docs.sh  contributing.md  index.md  index_new.md  mkdocs.yml  requirements.txt  sandboxed-benchmarks.md
docs/api/: index.md
docs/core-concepts/: agent-run-format.md  agent_env.md  execution-engine.md  overview.md  rl-algos.md  sdk.md  training.md  workflow-engine.md
docs/docs/: contributing.md  index.md
docs/examples/: deepcoder.md  deepscaler.md  frozenlake.md  index.md  sdk_solver_judge.md  search.md  sft.md  solver_judge.md  swe.md  tinker_rl.md  unified_trainer_opd.md
docs/experimental/: backend-protocol.md  benchmarks.md  eval-framework.md  index.md  rllm-and-backend-config.md  rllm-precompute-advantage.md  rllm-rl-advantage-estimator.md  rllm-ui.md  unified-trainer.md
docs/getting-started/: installation.md  quick-start.md
docs/stylesheets/: extra.css
examples/: run_code_agent.py  run_math_reasoner.py  train_code_agent.sh  train_code_agent_broadcast.sh  train_math_agent.sh
examples/agentcore_math/: prepare_gsm8k_data.py  train_agentcore_math_tinker.py  train_agentcore_math_tinker.sh  train_agentcore_math_verl.py  train_agentcore_math_verl.sh
examples/cli/agent_plugin/: README.md  pyproject.toml
examples/cli/agent_plugin/concierge_agent/: __init__.py  agent.py  evaluator.py
examples/cli/agent_plugin/tests/: test_agent.py
examples/code_agent/: run_code_agent.py
examples/countdown/: train_countdown.py  train_countdown.sh
examples/data/: README.md  load_datasets.py
examples/deepcoder/: README.md  evaluate_deepcoder.py  prepare_deepcoder_data.py  run_deepcoder.py  train_deepcoder.py  train_deepcoder_16k.sh  train_deepcoder_32k.sh  train_deepcoder_64k.sh
examples/deepresearch/: .env.example  README.md  deepresearch_agent.py  deepresearch_workflow.py
examples/deepscaler/: README.md  prepare_math_data.py  run_deepscaler.py  run_math_reasoner.py  train_deepscaler.py  train_deepscaler_16k.sh  train_deepscaler_24k.sh  train_deepscaler_8k.sh  train_deepscaler_megatron.py  train_deepscaler_megatron.sh  train_math_reasoner.py  train_math_reasoner.sh
examples/fireworks_math/: README.md  prepare_hendrycks_math_dataset.py  train_fireworks_math.py  train_fireworks_math.sh
examples/frozenlake/: README.md  prepare_frozenlake_data.py  run_frozenlake_agent.py  test_dataset_registry.py  train_frozenlake_agent.py  train_frozenlake_agent.sh
examples/geo3k/: geo3k_workflow.py
examples/math/: prepare_math_data.py  run_math_reasoner.py  run_math_with_tool.py  train_math_reasoner.py  train_math_reasoner.sh  train_math_with_tool.py  train_math_with_tool.sh
examples/math_distill/: README.md  prepare_deepmath_data.py  train_deepmath_distill_tinker.py  train_deepmath_distill_tinker.sh
examples/math_tinker/: rl_loop_tinker_original.py
examples/mcp/: README.md  (+6 more)
plugins/strands_agent/: README.md  pyproject.toml
plugins/strands_agent/strands_agent/: agent.py
rllm/: __init__.py  config.py  generate_math_trajectory.py  globals.py  misc.py  system_prompts.py  trajectory_visualizer.py  utils.py
scripts/: dump_cfg.py  install_megatron.sh  install_verl.sh  preprocess_dataset_verl.py  sft_pipeline.py  start_vllm_workers.py  test_distributed.py  test_tool_call.py  toolcall_pipeline_openai.py  train_chat_completions_sft.py  train_rl.py
tests/: conftest.py  test_openai_engine_chat_parser.py  test_store.py  test_verl_imports.py  test_verl_policy_loss.py
verl/: train.sh
(+935 files in other folders)
