[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mle-bench-agent"
version = "0.1.0"
description = "MLE-bench agent plugin for rLLM - trains agents to solve Kaggle ML competitions"
requires-python = ">=3.11"
dependencies = [
    "rllm",
    "openai",
    "agentbox",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
grading = ["mlebench"]
training = ["hydra-core"]

[tool.setuptools.packages.find]
include = ["mle_bench_agent*"]

# Plugin discovery: rllm CLI finds these by name
[project.entry-points."rllm.agents"]
mle_bench = "mle_bench_agent.agent:mle_bench_agent"

[project.entry-points."rllm.evaluators"]
mle_bench_evaluator = "mle_bench_agent.evaluator:MLEBenchEvaluator"
