[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "react-agent"
version = "0.1.0"
description = "General-purpose ReAct agent plugin for rLLM using OpenAI Agents SDK with hosted tools"
requires-python = ">=3.10"
dependencies = ["rllm", "openai-agents"]

[tool.setuptools.packages.find]
include = ["react_agent*"]

# Plugin discovery: rllm CLI finds these by name
[project.entry-points."rllm.agents"]
react = "react_agent.agent:react_agent"
