[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "concierge-agent"
version = "0.1.0"
description = "Example rLLM agent plugin: a restaurant concierge"
requires-python = ">=3.10"
dependencies = ["rllm"]

[tool.setuptools.packages.find]
include = ["concierge_agent*"]

# Plugin discovery: rllm CLI finds these by name
[project.entry-points."rllm.agents"]
concierge = "concierge_agent.agent:concierge_agent"

[project.entry-points."rllm.evaluators"]
relevance = "concierge_agent.evaluator:RelevanceEvaluator"
